--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			            <h2>A Data Analyst</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/motilal-das-42b4a9254/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BLjI78pnlSA6l%2BuFnsx8F%2FA%3D%3D">Linkedin</a> 
+			            <p><a href="https://www.linkedin.com/in/motilal-das-42b4a9254/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BLjI78pnlSA6l%2BuFnsx8F%2FA%3D%3D" class="btn btn-white btn-outline-white py-3 px-4">Linkedin</a> 
 							<a href="https://github.com/MkSingh431/MkSingh431" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -616,7 +616,7 @@
 			<!-- </div>
 		  </div>
 		</div>
-	  </footer> --> --> -->
+	  </footer> --> 
 
 
   <!-- loader -->
