--- a/index.html
+++ b/index.html
@@ -479,11 +479,11 @@
 
 		 <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/MkSingh430/IPL_Analysis_2008-2024" class="block-20 zoom-effect" style="background-image: url('images/ipl.jpg');">
+				<a href="https://iplanalyst.streamlit.app/" class="block-20 zoom-effect" style="background-image: url('images/ipl.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/MkSingh430/IPL_Analysis_2008-2024">IPL Analysis using Python</a></h3>
+				  <h3 class="heading"><a href="https://iplanalyst.streamlit.app/">IPL Analysis using Python</a></h3>
 				  <p>This project provides a detailed exploration of IPL matches and player performances over the years.</p>
 				</div>
 			  </div>
