--- a/index.html
+++ b/index.html
@@ -324,33 +324,32 @@
 		</div>
 		<br>
 		
-		<!-- <div class="row">
+		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2021-Present</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">Merkle</span>
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
+						<h2>Operation Executive</h2>
+						<span class="position">BAI Infosolutions Pvt. Ltd</span>
+						<p class="mt-4">BAI Infosolutions primarily concentrates on providing robust, end-to-end IT solutions across critical business functions. 
 							<ul>
-								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+								<li>SAP Data Integration: Successfully performed ETL (Extract, Transform, Load) on large-scale SAP ERP (ECC/S/4HANA) data for reporting, ensuring data consistency and analytical readiness</li>
+								<li>BI Reporting & Dashboards: Designed and deployed interactive SAP Business Objects/Analytics Cloud (SAC) dashboards focused on Key Performance Indicators (KPIs) like sales variance and inventory turnover</li>
 							</ul>
 						</p>
 					</div>
 
-				</div> -->
+				</div>
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2022-2023</span>
 						<h2>Data Entry Scpecialist</h2>
-						<span class="position"></span>
-						<p
+						<span class="position">Reliance E-Commerce </span>
+						<p>
 							<ul>
+								<li>Real-time Reporting: Developed real-time Business Intelligence (BI) dashboards using SAP Analytics Cloud (SAC) or Power BI integrated with SAP HANA to provide immediate insights into critical metrics (e.g., inventory levels, production output) for executive decision-making.</li>
 								<li>Analyse and monitor data management projects</li>
 								<li>Managing ERP data entry using SAP </li>
-								<li>Show qualities like problem-solving, collaboration, planning, productivity and communication. </li>
 							</ul>
 						</p>
 					</div>
